--- a/index.html
+++ b/index.html
@@ -205,35 +205,35 @@
         <div class="box">
             <img src="image/cart.png" alt="">
             <div id="ecom" class="content">
-                <a href="https://github.com/CCAnkit/Project-Amazon_Clone.git" target="_blank"><h3>project 02 - Amazon Clone</h3></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="image/Blog.jpg" alt="">
-            <div id="blog" class="content">
-               <a href="https://github.com/CCAnkit/Project-Blogging_Site.git" target="_blank"> <h3>project 03 - Blogging Site</h3></a>
-            </div>
-        </div>
-
-        <div  class="box">
-            <img src="image/Book.jpeg" alt="">
-            <div id="book" class="content">
-                <a href="https://github.com/CCAnkit/Project-Books_Management.git" target="_blank"> <h3>project 04 - Book Management</h3></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="image/internship-image.jpg" alt="">
-            <div id="intern" class="content">
-               <a href="https://github.com/CCAnkit/Project-Open_to_Intern.git" target="_blank">  <h3>project 05 - Open to Intern</h3></a>
+                <a href="https://github.com/bsoumya0985/project_E-Commerce" target="_blank"><h3>project 01 - E-Commerce Clone</h3></a>
             </div>
         </div>
 
         <div class="box">
             <img src="image/URL-shortener-title-555x270.jpg" alt="">
             <div id="url" class="content">
-                <a href="https://github.com/CCAnkit/Project-Bit.ly_Clone.git" target="_blank"> <h3>project 06 - URL Shortner</h3></a>
+                <a href="https://github.com/bsoumya0985/project_UrlShortner" target="_blank"> <h3>project 02 - URL Shortner</h3></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/Blog.jpg" alt="">
+            <div id="blog" class="content">
+               <a href="https://github.com/bsoumya0985/project_Bloggingsite" target="_blank"> <h3>project 03 - Blogging Site</h3></a>
+            </div>
+        </div>
+
+        <div  class="box">
+            <img src="image/Book.jpeg" alt="">
+            <div id="book" class="content">
+                <a href="https://github.com/bsoumya0985/project-booksManagementGroup23" target="_blank"> <h3>project 04 - Book Management</h3></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/internship-image.jpg" alt="">
+            <div id="intern" class="content">
+               <a href="https://github.com/bsoumya0985/project_open-2-intern" target="_blank">  <h3>project 05 - Open to Intern</h3></a>
             </div>
         </div>
 
